# TIG

./: Cargo.toml  Dockerfile  LICENSE.MD  README.MD  build.sh
.github/workflows/: release.yaml
crates/client/: Cargo.toml  config.example.yaml
crates/client/src/: config.rs  default_config.yaml  main.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: tig.proto
crates/proto/src/: lib.rs
