[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tonic = "0.13.1"
tig-proto = { path = "crates/proto" }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
color-eyre = "0.6.5"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
semver = "1.0.26"
tokio-util = "0.7.15"
futures-util = "0.3.31"
bytes = "1.10.1"

[profile.release]
strip = true
lto = true